@@ -17,65 +17,44 @@ import java.net.HttpURLConnection;
 import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
 import java.util.concurrent.Callable;
 import java.util.concurrent.TimeoutException;
 
-import javax.annotation.Nullable;
 import javax.inject.Inject;
 import javax.inject.Named;
 import javax.net.ssl.HttpsURLConnection;
 
 import org.sonatype.goodies.common.Loggers;
-import org.sonatype.goodies.testsupport.TestIndex;
 import org.sonatype.goodies.testsupport.junit.TestDataRule;
 import org.sonatype.goodies.testsupport.junit.TestIndexRule;
+import org.sonatype.goodies.testsupport.port.PortRegistry;
 import org.sonatype.nexus.common.app.ApplicationDirectories;
 import org.sonatype.nexus.common.event.EventManager;
-import org.sonatype.nexus.common.net.PortAllocator;
-import org.sonatype.nexus.common.text.Strings2;
 import org.sonatype.nexus.scheduling.TaskScheduler;
 
-import com.adobe.testing.s3mock.testcontainers.S3MockContainer;
 import com.google.common.base.Joiner;
 import com.google.common.base.Throwables;
+import com.google.common.collect.Range;
 import org.junit.After;
-import org.junit.AfterClass;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.rules.ExpectedException;
 import org.junit.runner.RunWith;
 import org.ops4j.net.URLUtils;
 import org.ops4j.pax.exam.CoreOptions;
-import org.ops4j.pax.exam.ExamFactory;
 import org.ops4j.pax.exam.MavenUtils;
 import org.ops4j.pax.exam.Option;
 import org.ops4j.pax.exam.OptionUtils;
 import org.ops4j.pax.exam.junit.PaxExam;
-import org.ops4j.pax.exam.karaf.container.internal.JavaVersionUtil;
 import org.ops4j.pax.exam.karaf.options.KarafDistributionConfigurationFileExtendOption;
-import org.ops4j.pax.exam.options.CompositeOption;
-import org.ops4j.pax.exam.options.DefaultCompositeOption;
 import org.ops4j.pax.exam.options.MavenUrlReference;
-import org.ops4j.pax.exam.options.OptionalCompositeOption;
 import org.ops4j.pax.exam.options.ProvisionOption;
-import org.ops4j.pax.exam.options.extra.EnvironmentOption;
-import org.ops4j.pax.exam.options.extra.VMOption;
 import org.ops4j.pax.exam.spi.reactors.ExamReactorStrategy;
 import org.ops4j.pax.exam.spi.reactors.PerClass;
 import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.testcontainers.containers.GenericContainer;
-import org.testcontainers.containers.output.Slf4jLogConsumer;
-import org.testcontainers.containers.wait.strategy.Wait;
-import org.testcontainers.utility.DockerImageName;
 
 import static com.google.common.base.Preconditions.checkNotNull;
-import static com.google.common.base.Strings.isNullOrEmpty;
-import static java.lang.String.format;
-import static java.util.Objects.isNull;
 import static org.ops4j.pax.exam.CoreOptions.composite;
 import static org.ops4j.pax.exam.CoreOptions.maven;
 import static org.ops4j.pax.exam.CoreOptions.mavenBundle;
@@ -85,17 +64,7 @@ import static org.ops4j.pax.exam.CoreOptions.systemTimeout;
 import static org.ops4j.pax.exam.CoreOptions.vmOption;
 import static org.ops4j.pax.exam.CoreOptions.when;
 import static org.ops4j.pax.exam.CoreOptions.wrappedBundle;
-import static org.ops4j.pax.exam.OptionUtils.combine;
 import static org.ops4j.pax.exam.karaf.options.KarafDistributionOption.*;
-import static org.sonatype.nexus.common.app.FeatureFlags.DATASTORE_CLUSTERED_ENABLED;
-import static org.sonatype.nexus.common.app.FeatureFlags.DATASTORE_CLUSTERED_ENABLED_NAMED;
-import static org.sonatype.nexus.common.app.FeatureFlags.DATASTORE_ENABLED;
-import static org.sonatype.nexus.common.app.FeatureFlags.DATASTORE_TABLE_SEARCH;
-import static org.sonatype.nexus.common.app.FeatureFlags.DATASTORE_TABLE_SEARCH_NAMED;
-import static org.sonatype.nexus.common.app.FeatureFlags.DATE_BASED_BLOBSTORE_LAYOUT_ENABLED;
-import static org.sonatype.nexus.common.app.FeatureFlags.ELASTIC_SEARCH_ENABLED_NAMED;
-import static org.sonatype.nexus.common.app.FeatureFlags.JWT_ENABLED;
-import static org.testcontainers.containers.BindMode.READ_ONLY;
 
 /**
  * Provides support for testing Nexus with Pax-Exam, test-cases can inject any component from the distribution. <br>
@@ -114,15 +83,13 @@ import static org.testcontainers.containers.BindMode.READ_ONLY;
  *
  * @since 3.0
  */
-@RunWith(SafeRunner.class)
-@SafeRunWith(PaxExam.class)
-@ExamFactory(NexusPaxExamTestFactory.class)
+@RunWith(PaxExam.class)
 @ExamReactorStrategy(PerClass.class)
 public abstract class NexusPaxExamSupport
 {
   public static final String NEXUS_PAX_EXAM_TIMEOUT_KEY = "nexus.pax.exam.timeout";
 
-  public static final int NEXUS_PAX_EXAM_TIMEOUT_DEFAULT = 480000; // 8 minutes
+  public static final int NEXUS_PAX_EXAM_TIMEOUT_DEFAULT = 300000;
 
   public static final String NEXUS_PAX_EXAM_INVOKER_KEY = "nexus.pax.exam.invoker";
 
@@ -132,8 +99,6 @@ public abstract class NexusPaxExamSupport
 
   public static final String NEXUS_PROPERTIES_FILE = "etc/nexus-default.properties";
 
-  public static final String DATA_STORE_PROPERTIES_FILE = "etc/fabric/nexus-store.properties";
-
   public static final String KARAF_CONFIG_PROPERTIES_FILE = "etc/karaf/config.properties";
 
   public static final String SYSTEM_PROPERTIES_FILE = "etc/karaf/system.properties";
@@ -142,39 +107,24 @@ public abstract class NexusPaxExamSupport
 
   public static final String KARAF_MANAGEMENT_FILE = "etc/karaf/org.apache.karaf.management.cfg";
 
-  public static final String S3_ENDPOINT_PROPERTY = "mock.s3.service.endpoint";
+  private static final String PORT_REGISTRY_MIN_KEY = "it.portRegistry.min";
 
-  private static final String PATCH_MODULE = "--patch-module";
+  private static final String PORT_REGISTRY_MAX_KEY = "it.portRegistry.max";
 
-  private static final String KARAF_VERSION = "karaf.version";
+  // port range 10000-30000 chosen to not overlap with typical range for ephemeral ports
 
-  public static String TEST_JDBC_URL_PROPERTY = "nexus.test.jdbcUrl";
+  private static final int PORT_REGISTRY_MIN_MAIN = 10000;
 
-  private static final String ADD_OPENS = "--add-opens";
+  private static final int PORT_REGISTRY_MAX_MAIN = 24999;
 
-  private static final String DATABASE_KEY = "it.database";
+  private static final int PORT_REGISTRY_MIN_FORK = PORT_REGISTRY_MAX_MAIN + 1;
 
-  private static final String BLOB_STORE_KEY = "it.blobstore";
-
-  private static final String SQL_SEARCH_KEY = "it.sql_search";
-
-  private static final String NX_PROPERTIES = "it.props";
-
-  private static final String HA_KEY = "it.ha";
-
-  /*
-   * Key identifying a system property which if set, should be used as a prefix for {@code it-data} subdirectory
-   * names to prevent a collision when Jenkins aggregates across parallel stages. (Jenkins isn't smart enough to
-   * avoid overwriting files)
-   */
-  private static final String PROP_TEST_PREFIX = "it.data.prefix";
+  private static final int PORT_REGISTRY_MAX_FORK = 30000;
 
   // -------------------------------------------------------------------------
 
   @Rule
-  public final TestDataRule testData = new TestDataRule(
-      resolveBaseFile("src/test/it-resources"),
-      resolveBaseFile("target/it-resources"));
+  public final TestDataRule testData = new TestDataRule(resolveBaseFile("src/test/it-resources"));
 
   @Rule
   @Inject
@@ -185,6 +135,8 @@ public abstract class NexusPaxExamSupport
 
   @Rule
   public final ExpectedException thrown = ExpectedException.none();
+
+  public static final PortRegistry portRegistry = createPortRegistry();
 
   @Inject
   @Named("http://localhost:${application-port}${nexus-context-path}")
@@ -203,40 +155,16 @@ public abstract class NexusPaxExamSupport
   @Inject
   protected TaskScheduler taskScheduler;
 
-  @Inject
-  @Named(ELASTIC_SEARCH_ENABLED_NAMED)
-  protected Boolean elasticsearch;
-
-  @Inject
-  @Named(DATASTORE_TABLE_SEARCH_NAMED)
-  protected Boolean datastoreTableSearch;
-
-  @Inject
-  @Named(DATASTORE_CLUSTERED_ENABLED_NAMED)
-  private Boolean sqlHaEnabled;
-
-  @Inject
-  @Nullable
-  @Named("nexus.datastore.nexus.jdbcUrl")
-  private String jdbcUrl;
-
-  //11.9 is the minimum support version
-  private static final String POSTGRES_IMAGE = "docker-all.repo.sonatype.com/postgres:11.9";
-
-  private static final int POSTGRES_PORT = 5432;
-
-  public static final String DB_USER = "nxrmUser";
-
-  public static final String DB_PASSWORD = "nxrmPassword";
-
-  private static GenericContainer postgresContainer = null;
-
-  private static S3MockContainer s3Container;
-
   protected final Logger log = checkNotNull(createLogger());
 
   protected Logger createLogger() {
     return Loggers.getLogger(this);
+  }
+
+  private static PortRegistry createPortRegistry() {
+    int portMin = Integer.getInteger(PORT_REGISTRY_MIN_KEY, PORT_REGISTRY_MIN_MAIN);
+    int portMax = Integer.getInteger(PORT_REGISTRY_MAX_KEY, PORT_REGISTRY_MAX_MAIN);
+    return new PortRegistry(portMin, portMax, 60 * 1000);
   }
 
   // -------------------------------------------------------------------------
@@ -302,10 +230,8 @@ public abstract class NexusPaxExamSupport
    * Periodically polls function until it returns {@code true} or 30 seconds have elapsed.
    *
    * @throws InterruptedException if the thread is interrupted
-   * @throws TimeoutException     if the timeout exceeded
-   * @deprecated use the Awaitility.await() helper instead of this method
+   * @throws TimeoutException if the timeout exceeded
    */
-  @Deprecated
   public static void waitFor(final Callable<Boolean> function) // NOSONAR
       throws InterruptedException, TimeoutException
   {
@@ -316,10 +242,8 @@ public abstract class NexusPaxExamSupport
    * Periodically polls function until it returns {@code true} or the timeout has elapsed.
    *
    * @throws InterruptedException if the thread is interrupted
-   * @throws TimeoutException     if the timeout exceeded
-   * @deprecated use the Awaitility.await() helper instead of this method
+   * @throws TimeoutException if the timeout exceeded
    */
-  @Deprecated
   public static void waitFor(final Callable<Boolean> function, final long millis) // NOSONAR
       throws InterruptedException, TimeoutException
   {
@@ -385,44 +309,30 @@ public abstract class NexusPaxExamSupport
   /**
    * @return Function that returns {@code true} when all tasks have stopped; otherwise {@code false}
    */
-  public static Callable<Boolean> tasksDone(TaskScheduler taskScheduler, int initialTaskCount) {
-    return () -> taskScheduler.getExecutedTaskCount() > initialTaskCount && taskScheduler.getRunningTaskCount() == 0;
-  }
-
-  /**
-   * @return Function that returns {@code true} when all tasks have stopped; otherwise {@code false}
-   */
   public static Callable<Boolean> tasksDone(TaskScheduler taskScheduler) {
-    return tasksDone(taskScheduler, 0);
+    return () -> taskScheduler.getExecutedTaskCount() > 0 && taskScheduler.getRunningTaskCount() == 0;
   }
 
   // -------------------------------------------------------------------------
 
   /**
-   * To test a different version set the 'it.nexus.bundle.version' system property.<br> You can also override the
-   * 'groupId', 'artifactId', and 'classifier' the same way.
+   * To test a different version set the 'it.nexus.bundle.version' system property.<br>
+   * You can also override the 'groupId', 'artifactId', and 'classifier' the same way.
    *
    * @return Pax-Exam option to install a Nexus distribution based on groupId and artifactId
    */
   public static Option nexusDistribution(final String groupId, final String artifactId) {
-    return nexusDistribution(maven(groupId, artifactId).version(nexusVersion()).type("zip"));
+    return nexusDistribution(maven(groupId, artifactId).versionAsInProject().type("zip"));
   }
 
   /**
-   * To test a different version set the 'it.nexus.bundle.version' system property.<br> You can also override the
-   * 'groupId', 'artifactId', and 'classifier' the same way.
+   * To test a different version set the 'it.nexus.bundle.version' system property.<br>
+   * You can also override the 'groupId', 'artifactId', and 'classifier' the same way.
    *
    * @return Pax-Exam option to install a Nexus distribution based on groupId, artifactId and classifier
    */
   public static Option nexusDistribution(final String groupId, final String artifactId, final String classifier) {
-    return nexusDistribution(maven(groupId, artifactId).classifier(classifier).version(nexusVersion()).type("zip"));
-  }
-
-  /**
-   * Uses a publicly available assembly to compute the version of Nexus
-   */
-  private static String nexusVersion() {
-    return MavenUtils.getArtifactVersion("org.sonatype.nexus.assemblies", "nexus-base-template");
+    return nexusDistribution(maven(groupId, artifactId).classifier(classifier).versionAsInProject().type("zip"));
   }
 
   /**
@@ -431,14 +341,14 @@ public abstract class NexusPaxExamSupport
   public static Option nexusDistribution(final MavenUrlReference frameworkZip) {
 
     // support explicit CI setting as well as automatic detection
-    String localRepository = System.getProperty("maven.repo.local", System.getProperty("localRepository", ""));
-    if (localRepository.length() > 0) {
+    String localRepo = System.getProperty("maven.repo.local", "");
+    if (localRepo.length() > 0) {
       // pass on explicit setting to Pax-URL (otherwise it uses wrong value)
-      System.setProperty("org.ops4j.pax.url.mvn.localRepository", localRepository);
+      System.setProperty("org.ops4j.pax.url.mvn.localRepository", localRepo);
     }
     else {
       // use placeholder in karaf config
-      localRepository = "${maven.repo.local}";
+      localRepo = "${maven.repo.local}";
     }
 
     // allow overriding the distribution under test from the command-line
@@ -462,18 +372,19 @@ public abstract class NexusPaxExamSupport
     File logbackXml = resolveBaseFile("target/test-classes/logback-test.xml");
     String logLevel = System.getProperty("it.test.log.level", "INFO");
 
+    // block ports which might be taken by Pax-Exam RMI
+    portRegistry.blockPorts(Range.closed(21000, 21099));
+
     return composite(
 
         // mimic nexus script
-        vmOption("-Xms2703m"),
-        vmOption("-Xmx2703m"),
-        vmOption("-XX:MaxDirectMemorySize=2703m"),
+        vmOption("-Xms600M"),
+        vmOption("-Xmx600M"),
+        vmOption("-XX:MaxDirectMemorySize=2G"),
         vmOption("-XX:+UnlockDiagnosticVMOptions"),
-        vmOption("-XX:+LogVMOutput"),
-        vmOption("-XX:LogFile=./nexus3/log/jvm.log"),
-        vmOption("-XX:-OmitStackTraceInFastThrow"),
+        vmOption("-XX:+UnsyncloadClass"),
 
-        vmOption("-Djava.io.tmpdir=./nexus3/tmp/"),
+        vmOption("-Djava.io.tmpdir=" + System.getProperty("java.io.tmpdir")),
 
         systemTimeout(examTimeout()),
 
@@ -493,6 +404,7 @@ public abstract class NexusPaxExamSupport
             .karafMain("org.sonatype.nexus.karaf.NexusMain") //
             .karafVersion("4") //
             .frameworkUrl(frameworkZip) //
+            .unpackDirectory(resolveBaseFile("target/it-data")) //
             .useDeployFolder(false), //
 
         when(debugging).useOptions(debugConfiguration()), // port 5005, suspend=y
@@ -503,14 +415,8 @@ public abstract class NexusPaxExamSupport
 
         keepRuntimeFolder(), // keep files around in case we need to debug
 
-        // enable testing of plugin snapshots from the local repository
-        systemProperty("nexus.testLocalSnapshots").value("true"),
-
-        propagateSystemProperty("maven.repo.local"),
-        propagateSystemProperty("localRepository"),
-
         editConfigurationFilePut(PAX_URL_MAVEN_FILE, // so we can fetch local snapshots
-            "org.ops4j.pax.url.mvn.localRepository", localRepository),
+            "org.ops4j.pax.url.mvn.localRepository", localRepo),
 
         useOwnKarafExamSystemConfiguration("nexus"),
 
@@ -529,155 +435,20 @@ public abstract class NexusPaxExamSupport
         editConfigurationFilePut(KARAF_CONFIG_PROPERTIES_FILE, //
             "karaf.shutdown.port", "-1"),
 
-        //configure db, including starting external resources
-        when(getValidTestDatabase().isUseContentStore()).useOptions(
-            configureDatabase()
-        ),
-        when(getValidTestDatabase().isUseOrient()).useOptions(
-            configureDatabase()
-        ),
-
-        when(System.getProperty(PROP_TEST_PREFIX) != null).useOptions(
-            editConfigurationFilePut(NEXUS_PROPERTIES_FILE, //
-                PROP_TEST_PREFIX, System.getProperty(PROP_TEST_PREFIX)),
-            editConfigurationFilePut(NEXUS_PROPERTIES_FILE, //
-                "goodies.build.name", System.getProperty(PROP_TEST_PREFIX))
-        ),
-
-        when(System.getProperty(NX_PROPERTIES) != null).useOptions(parseItProperties()),
-
-        // configure default blobstore
-        configureBlobstore(),
+        // configure port registry of forked JVM to use a different port range than main JVM driving the test
+        systemProperty(PORT_REGISTRY_MIN_KEY).value(Integer.toString(PORT_REGISTRY_MIN_FORK)),
+        systemProperty(PORT_REGISTRY_MAX_KEY).value(Integer.toString(PORT_REGISTRY_MAX_FORK)),
 
         // randomize ports...
         editConfigurationFilePut(NEXUS_PROPERTIES_FILE, //
-            "application-port", Integer.toString(PortAllocator.nextFreePort())),
+            "application-port", Integer.toString(portRegistry.reservePort())),
         editConfigurationFilePut(NEXUS_PROPERTIES_FILE, //
-            "application-port-ssl", Integer.toString(PortAllocator.nextFreePort())),
+            "application-port-ssl", Integer.toString(portRegistry.reservePort())),
         editConfigurationFilePut(KARAF_MANAGEMENT_FILE, //
-            "rmiRegistryPort", Integer.toString(PortAllocator.nextFreePort())),
+            "rmiRegistryPort", Integer.toString(portRegistry.reservePort())),
         editConfigurationFilePut(KARAF_MANAGEMENT_FILE, //
-            "rmiServerPort", Integer.toString(PortAllocator.nextFreePort())),
-
-        propagateSystemProperty("it.nexus.recordTaskLogs"),
-
-        new EnvironmentOption("TESTCONTAINERS_HUB_IMAGE_NAME_PREFIX=docker-all.repo.sonatype.com/")
+            "rmiServerPort", Integer.toString(portRegistry.reservePort()))
     );
-  }
-
-  private static Option[] parseItProperties() {
-    String nxProperties = System.getProperty(NX_PROPERTIES);
-    if (nxProperties == null) {
-      return new Option[0];
-    }
-    return Arrays.stream(nxProperties.split(","))
-        .peek(prop -> Loggers.getLogger(NexusPaxExamSupport.class).info("Found property {}", prop))
-        .map(prop -> prop.split("="))
-        .map(props -> editConfigurationFilePut(NEXUS_PROPERTIES_FILE, props[0], props[1]))
-        .toArray(Option[]::new);
-  }
-
-  protected static Option[] configureDatabase() {
-    switch (getValidTestDatabase()) {
-      case POSTGRES:
-        postgresContainer = new GenericContainer(POSTGRES_IMAGE) //NOSONAR
-            .withExposedPorts(POSTGRES_PORT)
-            .withEnv("POSTGRES_USER", DB_USER)
-            .withEnv("POSTGRES_PASSWORD", DB_PASSWORD)
-            .withLogConsumer(new Slf4jLogConsumer(LoggerFactory.getLogger(NexusPaxExamSupport.class)))
-            .withCommand("postgres", "-c", "max_connections=110")
-            .withClasspathResourceMapping("initialize-postgres.sql", "/docker-entrypoint-initdb.d/initialize-postgres.sql", READ_ONLY)
-            .waitingFor(Wait.forLogMessage(".*database system is ready to accept connections.*", 1));
-        return combine(null,
-            editConfigurationFilePut(NEXUS_PROPERTIES_FILE, DATASTORE_ENABLED, "true"),
-            editConfigurationFilePut(NEXUS_PROPERTIES_FILE, "nexus.datastore.nexus.name", "nexus"),
-            editConfigurationFilePut(NEXUS_PROPERTIES_FILE, "nexus.datastore.nexus.type", "jdbc"),
-            editConfigurationFilePut(NEXUS_PROPERTIES_FILE, "nexus.datastore.nexus.jdbcUrl", configurePostgres()),
-            editConfigurationFilePut(NEXUS_PROPERTIES_FILE, "nexus.datastore.nexus.username", DB_USER),
-            editConfigurationFilePut(NEXUS_PROPERTIES_FILE, "nexus.datastore.nexus.password", DB_PASSWORD),
-            haOption(),
-            sqlSearchOption(),
-            withDateBasedBlobstoreLayout(),
-            systemProperty(TEST_JDBC_URL_PROPERTY).value(configurePostgres())
-        );
-      case H2:
-        return combine(null,
-            sqlSearchOption(),
-            withDateBasedBlobstoreLayout(),
-            editConfigurationFilePut(NEXUS_PROPERTIES_FILE, DATASTORE_ENABLED, "true")
-        );
-      default:
-        throw new IllegalStateException("No case defined for " + getValidTestDatabase());
-    }
-  }
-
-  protected static Option configureBlobstore() {
-    switch (System.getProperty(BLOB_STORE_KEY, "")) {
-      case "s3":
-        String mockS3endpoint = S3_ENDPOINT_PROPERTY;
-        String bucket = "nexus.test.s3.bucket";
-        String region = "nexus.test.s3.region";
-        String accessKey = "nexus.test.s3.accessKey";
-        String accessSecret = "nexus.test.s3.accessSecret";
-        String endpoint = "nexus.test.s3.endpoint";
-        String forcePathStyle = "nexus.test.s3.forcePathStyle";
-
-        return composite(
-            editConfigurationFileExtend(NEXUS_PROPERTIES_FILE, "nexus.default.file.blobstore", Boolean.FALSE.toString()),
-            // enable s3 default
-            editConfigurationFileExtend(NEXUS_PROPERTIES_FILE, "nexus.test.default.s3", Boolean.TRUE.toString()),
-            // copy the maven property if it exists
-            getS3OptionalCompositeOption(mockS3endpoint, System.getProperty(mockS3endpoint)),
-            getS3OptionalCompositeOption(bucket, System.getProperty(bucket)),
-            getS3OptionalCompositeOption(region, System.getProperty(region)),
-            getS3OptionalCompositeOption(accessKey, System.getProperty(accessKey)),
-            getS3OptionalCompositeOption(accessSecret, System.getProperty(accessSecret)),
-            getS3OptionalCompositeOption(endpoint, System.getProperty(endpoint)),
-            getS3OptionalCompositeOption(forcePathStyle, System.getProperty(forcePathStyle))
-        );
-      case "azure":
-        return composite(
-            editConfigurationFileExtend(NEXUS_PROPERTIES_FILE, "nexus.default.file.blobstore", Boolean.FALSE.toString()),
-            // enable azure default
-            editConfigurationFileExtend(NEXUS_PROPERTIES_FILE, "nexus.test.default.azure", Boolean.TRUE.toString()),
-            editConfigurationFileExtend(NEXUS_PROPERTIES_FILE, "nexus.blobstore.new.azure", Boolean.TRUE.toString())
-        );
-      default:
-        return composite();
-    }
-  }
-
-  private static OptionalCompositeOption getS3OptionalCompositeOption(
-      final String propertyKey,
-      final Object propertyValue)
-  {
-    return when(Objects.nonNull(propertyValue)).useOptions(
-        editConfigurationFileExtend(NEXUS_PROPERTIES_FILE, propertyKey, propertyValue)
-    );
-  }
-
-  private static String configurePostgres() {
-    if (!postgresContainer.isRunning()) {
-      postgresContainer.start();
-    }
-
-    return String.format("jdbc:postgresql://%s:%d/",
-        postgresContainer.getHost(),
-        postgresContainer.getMappedPort(POSTGRES_PORT));
-  }
-
-  @AfterClass
-  public static final void shutdownPostgres() {
-    if (postgresContainer != null && postgresContainer.isRunning()) {
-      postgresContainer.stop();
-    }
-  }
-
-  @AfterClass
-  public static void shutdownS3() {
-    if (s3Container != null && s3Container.isRunning()) {
-      s3Container.stop();
-    }
   }
 
   /**
@@ -696,32 +467,11 @@ public abstract class NexusPaxExamSupport
         replaceConfigurationFile("etc/ssl/keystore.jks", keystore));
   }
 
-  public static Option withS3() {
-    String s3Endpoint = System.getProperty(S3_ENDPOINT_PROPERTY);
-    // If S3 endpoint has not been provided, we need to use S3 mock container
-    if (isNullOrEmpty(s3Endpoint)) {
-      // If container object has not been initialised, we need to create it
-      if (isNull(s3Container)) {
-        String s3mockImage = System.getProperty("it.blobstore.s3image", "docker-all.repo.sonatype.com/adobe/s3mock:2.17.0");
-        DockerImageName image = DockerImageName.parse(s3mockImage).asCompatibleSubstituteFor(S3MockContainer.IMAGE_NAME);
-        s3Container = new S3MockContainer(image);
-      }
-      // If container is not running, we need to start it
-      if (!s3Container.isRunning()) {
-        s3Container.start();
-      }
-      s3Endpoint = s3Container.getHttpEndpoint();
-    }
-    // Pass S3 endpoint to Nexus Repository configuration file
-    return editConfigurationFileExtend(NEXUS_PROPERTIES_FILE, S3_ENDPOINT_PROPERTY, s3Endpoint);
-  }
-
   /**
    * @return Pax-Exam option to change the Nexus edition based on groupId and artifactId
    */
   public static Option nexusEdition(final String groupId, final String artifactId) {
-    return nexusEdition(maven(groupId, artifactId).version(nexusVersion()).classifier("features").type("xml"),
-        artifactId + '/' + nexusVersion());
+    return nexusEdition(maven(groupId, artifactId).versionAsInProject().classifier("features").type("xml"), artifactId);
   }
 
   /**
@@ -735,8 +485,7 @@ public abstract class NexusPaxExamSupport
    * @return Pax-Exam option to install a Nexus plugin based on groupId and artifactId
    */
   public static Option nexusFeature(final String groupId, final String artifactId) {
-    return nexusFeature(maven(groupId, artifactId).version(nexusVersion()).classifier("features").type("xml"),
-        artifactId + '/' + nexusVersion());
+    return nexusFeature(maven(groupId, artifactId).versionAsInProject().classifier("features").type("xml"), artifactId);
   }
 
   /**
@@ -747,8 +496,8 @@ public abstract class NexusPaxExamSupport
   }
 
   /**
-   * Replacement for {@link CoreOptions#options(Option...)} to workaround Pax-Exam 'feature' where only the last
-   * 'editConfigurationFileExtend' for a given property key is honoured.
+   * Replacement for {@link CoreOptions#options(Option...)} to workaround Pax-Exam 'feature'
+   * where only the last 'editConfigurationFileExtend' for a given property key is honoured.
    */
   public static Option[] options(final Option... options) {
     final List<Option> result = new ArrayList<>();
@@ -759,7 +508,7 @@ public abstract class NexusPaxExamSupport
       // filter out the individual nexus-features values
       if (o instanceof KarafDistributionConfigurationFileExtendOption) {
         if ("nexus-features".equals(((KarafDistributionConfigurationFileExtendOption) o).getKey())) {
-          nexusFeatures.add((String) ((KarafDistributionConfigurationFileExtendOption) o).getValue());
+          nexusFeatures.add(((KarafDistributionConfigurationFileExtendOption) o).getValue());
           continue;
         }
       }
@@ -784,7 +533,7 @@ public abstract class NexusPaxExamSupport
    * Processes two sequences of options and combines them into a single sequence.
    */
   public static Option[] options(final Option[] options1, final Option... options2) {
-    return options(combine(options1, options2));
+    return options(OptionUtils.combine(options1, options2));
   }
 
   // -------------------------------------------------------------------------
@@ -795,92 +544,22 @@ public abstract class NexusPaxExamSupport
     testIndex.setDirectory(applicationDirectories.getInstallDirectory());
   }
 
-  public static void captureLogs(final TestIndex testIndex, final File logDir, final String className) {
-    testIndex.recordAndCopyLink("karaf.log", new File(logDir, "karaf.log"));
-    testIndex.recordAndCopyLink("nexus.log", new File(logDir, "nexus.log"));
-    testIndex.recordAndCopyLink("request.log", new File(logDir, "request.log"));
-    testIndex.recordAndCopyLink("outbound-request.log", new File(logDir, "outbound-request.log"));
-    testIndex.recordAndCopyLink("jvm.log", new File(logDir, "jvm.log"));
+  @After
+  public void stopTestRecording() {
+    testIndex.recordAndCopyLink("karaf.log", resolveWorkFile("log/karaf.log"));
+    testIndex.recordAndCopyLink("nexus.log", resolveWorkFile("log/nexus.log"));
+    testIndex.recordAndCopyLink("request.log", resolveWorkFile("log/request.log"));
+    testIndex.recordAndCopyLink("jvm.log", resolveWorkFile("log/jvm.log"));
 
-    if ("true".equals(System.getProperty("it.nexus.recordTaskLogs"))) {
-      File tasksDir = new File(logDir, "tasks");
-      File[] taskLogs = tasksDir.listFiles(f -> f.getName().endsWith(".log"));
-      if (taskLogs != null) {
-        for (File taskLog : taskLogs) {
-          testIndex.recordAndCopyLink("tasks/" + taskLog.getName(), taskLog);
-        }
-      }
-    }
-
-    final String surefirePrefix = "target/surefire-reports/" + className;
+    final String surefirePrefix = "target/surefire-reports/" + getClass().getName();
     testIndex.recordLink("surefire result", resolveBaseFile(surefirePrefix + ".txt"));
     testIndex.recordLink("surefire output", resolveBaseFile(surefirePrefix + "-output.txt"));
 
-    final String failsafePrefix = "target/failsafe-reports/" + className;
+    final String failsafePrefix = "target/failsafe-reports/" + getClass().getName();
     testIndex.recordLink("failsafe result", resolveBaseFile(failsafePrefix + ".txt"));
     testIndex.recordLink("failsafe output", resolveBaseFile(failsafePrefix + "-output.txt"));
-  }
-
-  @After
-  public void stopTestRecording() {
-    captureLogs(testIndex, resolveWorkFile("log"), getClass().getName());
 
     testCleaner.cleanOnSuccess(applicationDirectories.getInstallDirectory());
-  }
-
-  /**
-   * Get the database type to use for the test instance, based on system property.
-   */
-  public static TestDatabase getValidTestDatabase() {
-    try {
-      return TestDatabase.valueOf(Strings2.upper(System.getProperty(DATABASE_KEY)));
-    }
-    catch (Exception e) {
-      //fallback to H2 if it is invalid
-      return TestDatabase.H2;
-    }
-  }
-
-  public static Option sqlSearchOption() {
-    boolean sqlSearch = Boolean.parseBoolean(System.getProperty(SQL_SEARCH_KEY, "false"));
-
-    // SQL Search
-    return when(sqlSearch).useOptions(editConfigurationFilePut(NEXUS_PROPERTIES_FILE, //
-        DATASTORE_TABLE_SEARCH, "true"));
-  }
-
-  public static Option haOption() {
-    boolean ha = Boolean.parseBoolean(System.getProperty(HA_KEY, "false"));
-
-    // HA mode enable
-    Option dsClusteredEnable = editConfigurationFilePut(NEXUS_PROPERTIES_FILE, DATASTORE_CLUSTERED_ENABLED, "true");
-    Option jwtEnabled = editConfigurationFilePut(NEXUS_PROPERTIES_FILE, JWT_ENABLED, "true");
-    // For tests ensure the default blobstore & repositories are created
-    Option blobstoreProvisionDefaults =
-        editConfigurationFilePut(NEXUS_PROPERTIES_FILE, "nexus.blobstore.provisionDefaults", "true");
-    Option repositoryProvisionDefaults =
-        editConfigurationFilePut(NEXUS_PROPERTIES_FILE, "nexus.skipDefaultRepositories", "false");
-
-    List<String> formats = Arrays.asList("apt", "cocoapods", "conan", "conda", "gitlfs", "go", "helm", "nuget",
-        "p2", "pypi", "raw", "rubygems", "yum");
-    Option haFormats = composite(formats.stream()
-        .map(format -> editConfigurationFilePut(NEXUS_PROPERTIES_FILE, format("nexus.%s.ha.supported", format), "true"))
-        .toArray(Option[]::new));
-
-    return when(ha).useOptions(dsClusteredEnable, jwtEnabled, blobstoreProvisionDefaults, repositoryProvisionDefaults,
-        haFormats);
-  }
-
-  public static Option withDateBasedBlobstoreLayout() {
-    return editConfigurationFilePut(NEXUS_PROPERTIES_FILE, DATE_BASED_BLOBSTORE_LAYOUT_ENABLED, "true");
-  }
-
-  protected boolean isSqlHa() {
-    return sqlHaEnabled;
-  }
-
-  protected boolean isPostgreSQL() {
-    return jdbcUrl != null && jdbcUrl.contains("postgres");
   }
 
   // -------------------------------------------------------------------------
@@ -900,52 +579,5 @@ public abstract class NexusPaxExamSupport
     }
 
     return result;
-  }
-
-  public static CompositeOption javaVMCompositeOption() {
-    if(JavaVersionUtil.getMajorVersion() == 11) {
-      return new DefaultCompositeOption(
-          new VMOption("--add-exports=java.base/org.apache.karaf.specs.locator=java.xml,ALL-UNNAMED"),
-          new VMOption(PATCH_MODULE),
-          new VMOption("java.base=lib/endorsed/org.apache.karaf.specs.locator-" +
-              System.getProperty(KARAF_VERSION) + ".jar"));
-    }
-    else if (JavaVersionUtil.getMajorVersion() == 17) {
-      return new DefaultCompositeOption(
-          new VMOption("--add-reads=java.xml=java.logging"),
-          new VMOption("--add-exports=java.base/org.apache.karaf.specs.locator=java.xml,ALL-UNNAMED"),
-          new VMOption(PATCH_MODULE),
-          new VMOption("java.base=lib/endorsed/org.apache.karaf.specs.locator-"
-              + System.getProperty(KARAF_VERSION) + ".jar"),
-          new VMOption(PATCH_MODULE), new VMOption("java.xml=lib/endorsed/org.apache.karaf.specs.java.xml-"
-          + System.getProperty(KARAF_VERSION) + ".jar"),
-          new VMOption(ADD_OPENS),
-          new VMOption("java.base/java.security=ALL-UNNAMED"),
-          new VMOption(ADD_OPENS),
-          new VMOption("java.base/java.net=ALL-UNNAMED"),
-          new VMOption(ADD_OPENS),
-          new VMOption("java.base/java.lang=ALL-UNNAMED"),
-          new VMOption(ADD_OPENS),
-          new VMOption("java.base/java.util=ALL-UNNAMED"),
-          new VMOption(ADD_OPENS),
-          new VMOption("java.naming/javax.naming.spi=ALL-UNNAMED"),
-          new VMOption(ADD_OPENS),
-          new VMOption("java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED"),
-          new VMOption("--add-exports=java.base/sun.net.www.protocol.file=ALL-UNNAMED"),
-          new VMOption("--add-exports=java.base/sun.net.www.protocol.ftp=ALL-UNNAMED"),
-          new VMOption("--add-exports=java.base/sun.net.www.protocol.http=ALL-UNNAMED"),
-          new VMOption("--add-exports=java.base/sun.net.www.protocol.https=ALL-UNNAMED"),
-          new VMOption("--add-exports=java.base/sun.net.www.protocol.jar=ALL-UNNAMED"),
-          new VMOption("--add-exports=java.base/sun.net.www.content.text=ALL-UNNAMED"),
-          new VMOption("--add-exports=jdk.naming.rmi/com.sun.jndi.url.rmi=ALL-UNNAMED"),
-          new VMOption("--add-exports=java.rmi/sun.rmi.registry=ALL-UNNAMED"),
-          new VMOption("--add-exports=jdk.xml.dom/org.w3c.dom.html=ALL-UNNAMED"),
-          new VMOption("--add-exports=java.security.sasl/com.sun.security.sasl=ALL-UNNAMED"),
-          new VMOption("-classpath"),
-          new VMOption("lib/jdk9plus/*" + File.pathSeparator + "lib/boot/*"
-              + File.pathSeparator + "lib/endorsed/*")
-      );
-    }
-    return new DefaultCompositeOption();
   }
 }
