@@ -12,33 +12,23 @@
  */
 package org.sonatype.nexus.coreui;
 
+import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
-import javax.inject.Provider;
-import javax.validation.Validator;
 
 import org.sonatype.goodies.testsupport.TestSupport;
-import org.sonatype.nexus.scheduling.CurrentState;
-import org.sonatype.nexus.scheduling.ExternalTaskState;
-import org.sonatype.nexus.scheduling.TaskConfiguration;
-import org.sonatype.nexus.scheduling.TaskInfo;
-import org.sonatype.nexus.scheduling.TaskScheduler;
-import org.sonatype.nexus.scheduling.TaskState;
-import org.sonatype.nexus.scheduling.schedule.Manual;
-import org.sonatype.nexus.scheduling.schedule.Schedule;
-import org.sonatype.nexus.scheduling.schedule.Weekly;
+import org.sonatype.nexus.scheduling.ClusteredTaskState;
+import org.sonatype.nexus.scheduling.TaskInfo.EndState;
+import org.sonatype.nexus.scheduling.TaskInfo.RunState;
+import org.sonatype.nexus.scheduling.TaskInfo.State;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.Before;
-import org.junit.Rule;
 import org.junit.Test;
-import org.junit.rules.ExpectedException;
-import org.mockito.Mock;
-import org.mockito.Mockito;
 
-import static org.junit.Assert.assertEquals;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.nullValue;
 
 /**
  * Tests {@link TaskComponent}.
@@ -46,147 +36,159 @@ import static org.mockito.Mockito.when;
 public class TaskComponentTest
     extends TestSupport
 {
-  @Rule
-  public ExpectedException thrown = ExpectedException.none();
-
   private TaskComponent component;
-
-  private TaskScheduler scheduler;
-
-  @Mock
-  private Validator validator;
-
-  private final Provider<Validator> validatorProvider = () -> validator;
 
   @Before
   public void setUp() {
-    scheduler = mock(TaskScheduler.class, Mockito.RETURNS_DEEP_STUBS);
-    component = new TaskComponent(scheduler, validatorProvider, false);
+    component = new TaskComponent();
   }
 
   @Test
-  public void testValidateState_running() {
-    TaskInfo taskInfo = mock(TaskInfo.class);
-    CurrentState localState = mock(CurrentState.class);
-    ExternalTaskState extState = mock(ExternalTaskState.class);
-    when(localState.getState()).thenReturn(TaskState.RUNNING);
-    when(taskInfo.getId()).thenReturn("taskId");
-    when(taskInfo.getCurrentState()).thenReturn(localState);
-    when(extState.getState()).thenReturn(TaskState.RUNNING);
-    when(scheduler.toExternalTaskState(taskInfo)).thenReturn(extState);
-
-    thrown.expect(IllegalStateException.class);
-    thrown.expectMessage("Task can not be edited while it is being executed or it is in line to be executed");
-    component.validateState("taskId", taskInfo);
+  public void testGetAggregateState_RunningVsWaiting() {
+    List<ClusteredTaskState> states = Arrays.asList(
+        new ClusteredTaskState("node-a", State.RUNNING, RunState.STARTING, null, null, null),
+        new ClusteredTaskState("node-b", State.WAITING, null, null, null, null));
+    assertThat(component.getAggregateState(states), is(State.RUNNING));
   }
 
   @Test
-  public void testValidateState_notRunning() {
-    TaskInfo taskInfo = mock(TaskInfo.class);
-    CurrentState localState = mock(CurrentState.class);
-    ExternalTaskState extState = mock(ExternalTaskState.class);
-    when(localState.getState()).thenReturn(TaskState.WAITING);
-    when(taskInfo.getId()).thenReturn("taskId");
-    when(taskInfo.getCurrentState()).thenReturn(localState);
-    when(extState.getState()).thenReturn(TaskState.WAITING);
-    when(scheduler.toExternalTaskState(taskInfo)).thenReturn(extState);
-
-    component.validateState("taskId", taskInfo);
+  public void testGetAggregateState_RunningVsDone() {
+    List<ClusteredTaskState> states = Arrays.asList(
+        new ClusteredTaskState("node-a", State.RUNNING, RunState.STARTING, null, null, null),
+        new ClusteredTaskState("node-b", State.DONE, null, null, null, null));
+    assertThat(component.getAggregateState(states), is(State.RUNNING));
   }
 
   @Test
-  public void testValidateScriptUpdate_noSourceChange() {
-    TaskConfiguration taskConfiguration = new TaskConfiguration();
-    taskConfiguration.setString("source", "println 'hello'");
-
-    TaskInfo taskInfo = mock(TaskInfo.class);
-    when(taskInfo.getConfiguration()).thenReturn(taskConfiguration);
-
-    TaskXO taskXO = new TaskXO();
-    taskXO.setProperties(ImmutableMap.of("source", "println 'hello'"));
-
-    component.validateScriptUpdate(taskInfo, taskXO);
+  public void testGetAggregateState_WaitingVsDone() {
+    List<ClusteredTaskState> states = Arrays.asList(
+        new ClusteredTaskState("node-a", State.WAITING, null, null, null, null),
+        new ClusteredTaskState("node-b", State.DONE, null, null, null, null));
+    assertThat(component.getAggregateState(states), is(State.WAITING));
   }
 
   @Test
-  public void testValidateScriptUpdate_sourceChange_allowCreation() {
-    TaskConfiguration taskConfiguration = new TaskConfiguration();
-    taskConfiguration.setString("source", "println 'hello'");
-
-    TaskInfo taskInfo = mock(TaskInfo.class);
-    when(taskInfo.getConfiguration()).thenReturn(taskConfiguration);
-
-    TaskXO taskXO = new TaskXO();
-    taskXO.setProperties(ImmutableMap.of("source", "println 'hello world'"));
-
-    component = new TaskComponent(scheduler, validatorProvider, true);
-    component.validateScriptUpdate(taskInfo, taskXO);
+  public void testGetAggregateRunState_CanceledVsRunning() {
+    List<ClusteredTaskState> states = Arrays.asList(
+        new ClusteredTaskState("node-a", State.RUNNING, RunState.CANCELED, null, null, null),
+        new ClusteredTaskState("node-b", State.RUNNING, RunState.RUNNING, null, null, null),
+        new ClusteredTaskState("node-c", State.WAITING, null, null, null, null));
+    assertThat(component.getAggregateRunState(states), is(RunState.CANCELED));
   }
 
   @Test
-  public void testValidateScriptUpdate_sourceChange_doNotAllowCreation() {
-    TaskConfiguration taskConfiguration = new TaskConfiguration();
-    taskConfiguration.setString("source", "println 'hello'");
-
-    TaskInfo taskInfo = mock(TaskInfo.class);
-    when(taskInfo.getConfiguration()).thenReturn(taskConfiguration);
-
-    TaskXO taskXO = new TaskXO();
-    taskXO.setProperties(ImmutableMap.of("source", "println 'hello world'"));
-
-    thrown.expect(IllegalStateException.class);
-    thrown.expectMessage("Script source updates are not allowed");
-
-    component.validateScriptUpdate(taskInfo, taskXO);
+  public void testGetAggregateRunState_CanceledVsBlocked() {
+    List<ClusteredTaskState> states = Arrays.asList(
+        new ClusteredTaskState("node-a", State.RUNNING, RunState.CANCELED, null, null, null),
+        new ClusteredTaskState("node-b", State.RUNNING, RunState.BLOCKED, null, null, null),
+        new ClusteredTaskState("node-c", State.WAITING, null, null, null, null));
+    assertThat(component.getAggregateRunState(states), is(RunState.CANCELED));
   }
 
   @Test
-  public void testNotExposedTaskCannotBeCreated() throws Exception {
-    TaskConfiguration taskConfiguration = new TaskConfiguration();
-    taskConfiguration.setString("source", "println 'hello'");
-    taskConfiguration.setExposed(false);
-
-    TaskInfo taskInfo = mock(TaskInfo.class);
-    when(taskInfo.getConfiguration()).thenReturn(taskConfiguration);
-    when(scheduler.getScheduleFactory().manual()).thenReturn(new Manual());
-
-    TaskXO taskXO = new TaskXO();
-    taskXO.setProperties(ImmutableMap.of("source", "println 'hello world'"));
-    taskXO.setSchedule("manual");
-
-    thrown.expect(IllegalStateException.class);
-    thrown.expectMessage("This task is not allowed to be created");
-
-    component.create(taskXO);
+  public void testGetAggregateRunState_CanceledVsStarting() {
+    List<ClusteredTaskState> states = Arrays.asList(
+        new ClusteredTaskState("node-a", State.RUNNING, RunState.CANCELED, null, null, null),
+        new ClusteredTaskState("node-b", State.RUNNING, RunState.STARTING, null, null, null),
+        new ClusteredTaskState("node-c", State.WAITING, null, null, null, null));
+    assertThat(component.getAggregateRunState(states), is(RunState.CANCELED));
   }
 
   @Test
-  public void testAppendPlanReconciliationText() {
-    TaskConfiguration taskConfiguration = mock(TaskConfiguration.class);
-    when(taskConfiguration.isVisible()).thenReturn(true);
-    when(taskConfiguration.getTypeId()).thenReturn(TaskComponent.PLAN_RECONCILIATION_TASK_ID);
+  public void testGetAggregateRunState_RunningVsBlocked() {
+    List<ClusteredTaskState> states = Arrays.asList(
+        new ClusteredTaskState("node-a", State.RUNNING, RunState.RUNNING, null, null, null),
+        new ClusteredTaskState("node-b", State.RUNNING, RunState.BLOCKED, null, null, null),
+        new ClusteredTaskState("node-c", State.WAITING, null, null, null, null));
+    assertThat(component.getAggregateRunState(states), is(RunState.RUNNING));
+  }
 
-    TaskInfo taskInfo = mock(TaskInfo.class);
-    CurrentState localState = mock(CurrentState.class);
-    Schedule schedule = mock(Weekly.class);
-    when(localState.getState()).thenReturn(TaskState.WAITING);
-    when(taskInfo.getId()).thenReturn("taskId");
-    when(taskInfo.getTypeId()).thenReturn(TaskComponent.PLAN_RECONCILIATION_TASK_ID);
-    when(taskInfo.getCurrentState()).thenReturn(localState);
-    when(taskInfo.getConfiguration()).thenReturn(taskConfiguration);
-    when(taskInfo.getSchedule()).thenReturn(schedule);
-    when(scheduler.listsTasks()).thenReturn(List.of(taskInfo));
+  @Test
+  public void testGetAggregateRunState_RunningVsStarting() {
+    List<ClusteredTaskState> states = Arrays.asList(
+        new ClusteredTaskState("node-a", State.RUNNING, RunState.RUNNING, null, null, null),
+        new ClusteredTaskState("node-b", State.RUNNING, RunState.STARTING, null, null, null),
+        new ClusteredTaskState("node-c", State.WAITING, null, null, null, null));
+    assertThat(component.getAggregateRunState(states), is(RunState.RUNNING));
+  }
 
-    ExternalTaskState extState = mock(ExternalTaskState.class);
-    when(scheduler.toExternalTaskState(taskInfo)).thenReturn(extState);
-    when(extState.getState()).thenReturn(TaskState.WAITING);
-    when(extState.getLastEndState()).thenReturn(TaskState.OK);
-    when(extState.getLastRunStarted()).thenReturn(new Date());
-    when(extState.getLastRunDuration()).thenReturn(100L);
+  @Test
+  public void testGetAggregateRunState_BlockedVsStarting() {
+    List<ClusteredTaskState> states = Arrays.asList(
+        new ClusteredTaskState("node-a", State.RUNNING, RunState.BLOCKED, null, null, null),
+        new ClusteredTaskState("node-b", State.RUNNING, RunState.STARTING, null, null, null),
+        new ClusteredTaskState("node-c", State.WAITING, null, null, null, null));
+    assertThat(component.getAggregateRunState(states), is(RunState.BLOCKED));
+  }
 
-    List<TaskXO> tasks = component.read();
-    assertEquals(1, tasks.size());
-    assertEquals(TaskComponent.PLAN_RECONCILIATION_TASK_ID, tasks.get(0).getTypeId());
-    assertEquals("Ok [0s]" + TaskComponent.PLAN_RECONCILIATION_TASK_OK_TEXT, tasks.get(0).getLastRunResult());
+  @Test
+  public void testGetAggregateEndState_FailedVsCanceled() {
+    List<ClusteredTaskState> states = Arrays.asList(
+        new ClusteredTaskState("node-a", State.WAITING, null, EndState.FAILED, null, null),
+        new ClusteredTaskState("node-b", State.WAITING, null, EndState.CANCELED, null, null),
+        new ClusteredTaskState("node-c", State.WAITING, null, null, null, null));
+    assertThat(component.getAggregateEndState(states), is(EndState.FAILED));
+  }
+
+  @Test
+  public void testGetAggregateEndState_FailedVsOk() {
+    List<ClusteredTaskState> states = Arrays.asList(
+        new ClusteredTaskState("node-a", State.WAITING, null, EndState.FAILED, null, null),
+        new ClusteredTaskState("node-b", State.WAITING, null, EndState.OK, null, null),
+        new ClusteredTaskState("node-c", State.WAITING, null, null, null, null));
+    assertThat(component.getAggregateEndState(states), is(EndState.FAILED));
+  }
+
+  @Test
+  public void testGetAggregateEndState_CanceledVsOk() {
+    List<ClusteredTaskState> states = Arrays.asList(
+        new ClusteredTaskState("node-a", State.WAITING, null, EndState.CANCELED, null, null),
+        new ClusteredTaskState("node-b", State.WAITING, null, EndState.OK, null, null),
+        new ClusteredTaskState("node-c", State.WAITING, null, null, null, null));
+    assertThat(component.getAggregateEndState(states), is(EndState.CANCELED));
+  }
+
+  @Test
+  public void testGetAggregateLastRun() {
+    List<ClusteredTaskState> states = Arrays.asList(
+        new ClusteredTaskState("node-a", State.WAITING, null, null, new Date(1234567890), null),
+        new ClusteredTaskState("node-b", State.WAITING, null, null, new Date(987654321), null),
+        new ClusteredTaskState("node-c", State.WAITING, null, null, null, null));
+    assertThat(component.getAggregateLastRun(states), is(new Date(1234567890)));
+  }
+
+  @Test
+  public void testGetAggregateRunDuration() {
+    List<ClusteredTaskState> states = Arrays.asList(
+        new ClusteredTaskState("node-a", State.WAITING, null, null, null, 123456L),
+        new ClusteredTaskState("node-b", State.WAITING, null, null, null, 654321L),
+        new ClusteredTaskState("node-c", State.WAITING, null, null, null, null));
+    assertThat(component.getAggregateRunDuration(states), is(654321L));
+  }
+
+  @Test
+  public void testAsTaskStates() {
+    assertThat(component.asTaskStates(null), is(nullValue()));
+    List<ClusteredTaskState> states = Arrays.asList(
+        new ClusteredTaskState("node-a", State.RUNNING, RunState.STARTING, null, null, null),
+        new ClusteredTaskState("node-b", State.RUNNING, RunState.BLOCKED, EndState.OK, null, 10000L));
+    List<TaskStateXO> xos = component.asTaskStates(states);
+    assertThat(xos, hasSize(2));
+    assertThat(xos.get(0).getNodeId(), is("node-a"));
+    assertThat(xos.get(0).getStatus(), is(State.RUNNING.name()));
+    assertThat(xos.get(0).getStatusDescription(), is("Starting"));
+    assertThat(xos.get(1).getNodeId(), is("node-b"));
+    assertThat(xos.get(1).getStatus(), is(State.RUNNING.name()));
+    assertThat(xos.get(1).getStatusDescription(), is("Blocked"));
+    assertThat(xos.get(1).getLastRunResult(), is("Ok [10s]"));
+  }
+
+  @Test
+  public void testAsTaskStates_SuppressedIfAllCompletedSuccessfully() {
+    List<ClusteredTaskState> states = Arrays.asList(
+        new ClusteredTaskState("node-a", State.WAITING, null, null, null, null),
+        new ClusteredTaskState("node-b", State.DONE, null, null, null, null),
+        new ClusteredTaskState("node-c", State.WAITING, null, EndState.OK, null, null));
+    assertThat(component.asTaskStates(states), is(nullValue()));
   }
 }
